fixed amount align

--- a/djv-web/src/main/webapp/style/cart.css
+++ b/djv-web/src/main/webapp/style/cart.css
@@ -6,6 +6,7 @@
 #amountButtonPlus, #amountInput{
     border-top-left-radius: 0%;
     border-bottom-left-radius: 0%;
+    text-align: center;
 }
 
 #stepGroup{
